// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label/> should render a Label 1`] = `<div />`;

exports[`<Label/> should render a Label 2`] = `
<div>
  <div
    class="wrapper"
  >
    <span
      class="text"
    >
      valid@email.com
    </span>
    <div
      class="icon"
    >
      <svg
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 18L18 6M6 6l12 12"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Label/> should render a Label 3`] = `
<div>
  <div
    class="wrapper invalid"
  >
    <span
      class="text"
    >
      invalid_email.com
    </span>
    <div
      class="icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M10 6H14v12H10Z"
            fill="currentColor"
          />
          <path
            d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1-7v2h2v-2h-2zm0-8v6h2V7h-2z"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
